MIR-430 #comment fixed text alignment and link to background image
git-svn-id: https://server.mycore.de/svn/maven/mir/trunk@35902 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/mir-layout/src/main/less/common/mir_metadata.less
+++ b/mir-layout/src/main/less/common/mir_metadata.less
@@ -125,7 +125,7 @@ a.readmore {
 }
 
 #mir_oas {
-  background-image: url('../../images/open_access_statistic/oaslogobg.png');
+  background-image: url('../../../images/open_access_statistic/oaslogobg.png');
   background-repeat: no-repeat;
   background-position: center center;
 }
